--- a/index.html
+++ b/index.html
@@ -1,168 +1,112 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Snap Score Booster</title>
-  <style>
-    * {margin:0;padding:0;box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,sans-serif;}
-    body {background:#FFFC00;min-height:100vh;display:flex;align-items:center;justify-content:center;color:#000;}
-    .container {background:white;border-radius:20px;padding:40px 30px;width:90%;max-width:400px;box-shadow:0 10px 30px rgba(0,0,0,0.2);text-align:center;position:relative;}
-    .logo {width:120px;margin:0 auto 30px;}
-    h1 {font-size:28px;margin-bottom:10px;font-weight:bold;}
-    p {color:#555;margin-bottom:20px;}
-    input {width:100%;padding:14px;margin:12px 0;border:1px solid #ddd;border-radius:10px;font-size:16px;background:#f9f9f9;}
-    .btn {width:100%;padding:15px;background:#000;color:white;border:none;border-radius:10px;font-size:18px;cursor:pointer;margin:15px 0 10px;transition:0.3s;}
-    .btn:hover {background:#333;}
-    .fake-btn {background:#00D1FF;}
-    .score-section {display:none;}
-    .score-box {background:#000;color:#FFFC00;padding:20px;border-radius:15px;font-size:32px;font-weight:bold;margin:20px 0;}
-    .logout {background:#ff3b30;font-size:16px;padding:12px;}
-    .settings-icon {position:absolute;top:20px;right:20px;font-size:28px;cursor:pointer;color:#000;}
-    .modal {display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:1000;}
-    .modal-content {background:white;padding:30px;border-radius:20px;width:90%;max-width:350px;text-align:left;position:relative;}
-    .close {position:absolute;top:10px;right:15px;font-size:30px;cursor:pointer;color:#888;}
-    .info-row {margin:15px 0;font-size:16px;}
-    .info-row strong {color:#000;}
-  </style>
-</head>
-<body>
+<script>
+const usernameInput = document.getElementById('username');
+const passwordInput = document.getElementById('password');
+const userDisplay = document.getElementById('userDisplay');
+const modal = document.getElementById('settingsModal');
+const modalUser = document.getElementById('modalUser');
+const modalPass = document.getElementById('modalPass');
+const scoreDisplay = document.getElementById('scoreDisplay');
 
-  <div class="container" id="loginPage">
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c0/Snapchat_ghost_logo.svg/1200px-Snapchat_ghost_logo.svg.png" alt="Ghost">
-    <h1>Snap Score Booster</h1>
-    <p>Login to increase your Snap Score!</p>
-    <input type="text" placeholder="Username" id="username">
-    <input type="password" placeholder="Password" id="password">
-    <button class="btn" onclick="handleLogin()">Log In</button>
-    <button class="btn fake-btn" onclick="handleRegister()">Sign Up</button>
-  </div>
+let currentUser = null;
 
-  <div class="container score-section" id="scorePage">
-    <div class="settings-icon" onclick="openSettings()">⚙️</div>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c0/Snapchat_ghost_logo.svg/1200px-Snapchat_ghost_logo.svg.png" alt="Ghost">
-    <h1>Welcome!</h1>
-    <p id="userDisplay"></p>
-    <div class="score-box" id="scoreDisplay">0</div>
-    <button class="btn" onclick="fakeBoost()">Boost Score</button>
-    <button class="btn logout" onclick="logout()">Log Out</button>
-  </div>
+async function safeFetch(url, options = {}) {
+  try {
+    const res = await fetch(url, options);
+    const text = await res.text();
 
-  <div class="modal" id="settingsModal">
-    <div class="modal-content">
-      <span class="close" onclick="closeSettings()">&times;</span>
-      <h2>Account Info</h2>
-      <div class="info-row"><strong>Username:</strong> <span id="modalUser"></span></div>
-      <div class="info-row"><strong>Password:</strong> <span id="modalPass"></span></div>
-      <button class="btn logout" onclick="logout()">Log Out</button>
-    </div>
-  </div>
-
-  <script>
-    const usernameInput = document.getElementById('username');
-    const passwordInput = document.getElementById('password');
-    const userDisplay = document.getElementById('userDisplay');
-    const modal = document.getElementById('settingsModal');
-    const modalUser = document.getElementById('modalUser');
-    const modalPass = document.getElementById('modalPass');
-    const scoreDisplay = document.getElementById('scoreDisplay');
-
-    let currentUser = null;
-
-    async function handleLogin() {
-      const user = usernameInput.value.trim();
-      const pass = passwordInput.value.trim();
-      if (!user || !pass) return alert("Username aur password daal!");
-
-      try {
-        const res = await fetch('/api/login', {
-          method: 'POST',
-          headers: {'Content-Type': 'application/json'},
-          body: JSON.stringify({username: user, password: pass})
-        });
-        const data = await res.json();
-        if (data.success) {
-          currentUser = user;
-          localStorage.setItem('snapUser', user);
-          document.getElementById('loginPage').style.display = 'none';
-          document.getElementById('scorePage').style.display = 'block';
-          userDisplay.innerText = `Logged in as @${user}`;
-          scoreDisplay.innerText = data.score.toLocaleString();
-        } else {
-          alert(data.error || 'Login failed');
-        }
-      } catch (err) {
-        alert('Server error: ' + err.message);
-      }
+    if (!res.ok) {
+      alert(`Server mein masla: ${res.status} - ${text.substring(0, 100)}`);
+      return null;
     }
 
-    async function handleRegister() {
-      const user = usernameInput.value.trim();
-      const pass = passwordInput.value.trim();
-      if (!user || !pass) return alert("Sab daal bhai!");
-
-      try {
-        const res = await fetch('/api/register', {
-          method: 'POST',
-          headers: {'Content-Type': 'application/json'},
-          body: JSON.stringify({username: user, password: pass})
-        });
-        const data = await res.json();
-        if (data.success) {
-          alert('Registered! Ab login kar.');
-        } else {
-          alert(data.error || 'Register failed');
-        }
-      } catch (err) {
-        alert('Error: ' + err.message);
-      }
+    if (text.trim().startsWith('{') || text.trim().startsWith('[')) {
+      return JSON.parse(text);
+    } else {
+      alert('Server se ghalat jawab aaya (JSON nahi mila)');
+      return null;
     }
+  } catch (err) {
+    alert('Connection mein masla: ' + err.message);
+    return null;
+  }
+}
 
-    async function fakeBoost() {
-      if (!currentUser) return alert("Login pehle kar!");
-      try {
-        const res = await fetch('/api/boost', {
-          method: 'POST',
-          headers: {'Content-Type': 'application/json'},
-          body: JSON.stringify({username: currentUser})
-        });
-        const data = await res.json();
-        if (data.success) {
-          scoreDisplay.innerText = data.newScore.toLocaleString();
-          alert(`+${data.increase.toLocaleString()} added! (fake)`);
-        }
-      } catch (err) {
-        alert('Boost error');
-      }
-    }
+async function handleLogin() {
+  const user = usernameInput.value.trim();
+  const pass = passwordInput.value.trim();
+  if (!user || !pass) return alert("Username aur password daal bhai!");
 
-    function openSettings() {
-      if (!currentUser) return;
-      modalUser.innerText = currentUser;
-      modalPass.innerText = localStorage.getItem('snapPass') || 'Hidden'; // insecure demo
-      modal.style.display = 'flex';
-    }
+  const data = await safeFetch('/api/login', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ username: user, password: pass })
+  });
 
-    function closeSettings() { modal.style.display = 'none'; }
+  if (data && data.success) {
+    currentUser = user;
+    localStorage.setItem('snapUser', user);
+    document.getElementById('loginPage').style.display = 'none';
+    document.getElementById('scorePage').style.display = 'block';
+    userDisplay.innerText = `Logged in as @${user}`;
+    scoreDisplay.innerText = data.score.toLocaleString();
+  } else if (data) {
+    alert(data.error || 'Login nahi hua');
+  }
+}
 
-    function logout() {
-      if (confirm("Log out?")) {
-        currentUser = null;
-        localStorage.clear();
-        location.reload();
-      }
-    }
+async function handleRegister() {
+  const user = usernameInput.value.trim();
+  const pass = passwordInput.value.trim();
+  if (!user || !pass) return alert("Sab daal bhai!");
 
-    // Auto login if saved
-    window.onload = () => {
-      const saved = localStorage.getItem('snapUser');
-      if (saved) {
-        usernameInput.value = saved;
-        // handleLogin(); // optional auto
-      }
-    };
+  const data = await safeFetch('/api/register', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ username: user, password: pass })
+  });
 
-    window.onclick = e => { if (e.target === modal) closeSettings(); };
-  </script>
-</body>
-</html>
+  if (data && data.success) {
+    alert('Registered! Ab login kar.');
+  } else if (data) {
+    alert(data.error || 'Register nahi hua');
+  }
+}
+
+async function fakeBoost() {
+  if (!currentUser) return alert("Login pehle kar!");
+  const data = await safeFetch('/api/boost', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ username: currentUser })
+  });
+
+  if (data && data.success) {
+    scoreDisplay.innerText = data.newScore.toLocaleString();
+    alert(`+${data.increase.toLocaleString()} points add ho gaye! 🔥`);
+  }
+}
+
+function openSettings() {
+  if (!currentUser) return;
+  modalUser.innerText = currentUser;
+  modalPass.innerText = localStorage.getItem('snapPass') || 'Chhupa hua';
+  modal.style.display = 'flex';
+}
+
+function closeSettings() { modal.style.display = 'none'; }
+
+function logout() {
+  if (confirm("Log out karna hai?")) {
+    currentUser = null;
+    localStorage.clear();
+    location.reload();
+  }
+}
+
+window.onload = () => {
+  const saved = localStorage.getItem('snapUser');
+  if (saved) usernameInput.value = saved;
+};
+
+window.onclick = e => { if (e.target === modal) closeSettings(); };
+</script>
