--- a/index.html
+++ b/index.html
@@ -1,112 +1,129 @@
-<script>
-const usernameInput = document.getElementById('username');
-const passwordInput = document.getElementById('password');
-const userDisplay = document.getElementById('userDisplay');
-const modal = document.getElementById('settingsModal');
-const modalUser = document.getElementById('modalUser');
-const modalPass = document.getElementById('modalPass');
-const scoreDisplay = document.getElementById('scoreDisplay');
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Snap Score Booster - Login</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+    }
+    body {
+      background: #FFFC00; /* Snapchat yellow */
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #000;
+    }
+    .container {
+      background: white;
+      border-radius: 20px;
+      padding: 40px 30px;
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+    .logo {
+      width: 120px;
+      margin: 0 auto 30px;
+    }
+    h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
+    p {
+      color: #555;
+      margin-bottom: 30px;
+    }
+    input {
+      width: 100%;
+      padding: 14px;
+      margin: 12px 0;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      font-size: 16px;
+      background: #f9f9f9;
+    }
+    .btn {
+      width: 100%;
+      padding: 15px;
+      background: #000;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 18px;
+      cursor: pointer;
+      margin: 15px 0;
+      transition: 0.3s;
+    }
+    .btn:hover {
+      background: #333;
+    }
+    .score-section {
+      display: none;
+      margin-top: 30px;
+    }
+    .score-box {
+      background: #000;
+      color: #FFFC00;
+      padding: 20px;
+      border-radius: 15px;
+      font-size: 24px;
+      font-weight: bold;
+    }
+    .fake-btn {
+      background: #00D1FF;
+    }
+  </style>
+</head>
+<body>
 
-let currentUser = null;
+  <div class="container" id="loginPage">
+    <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c0/Snapchat鬼logo.svg/1200px-Snapchat鬼logo.svg.png" alt="Snapchat Ghost Logo">
+    <h1>Snap Score Booster</h1>
+    <p>Login to increase your Snap Score fast!</p>
+    
+    <input type="text" placeholder="Username or Email" id="username">
+    <input type="password" placeholder="Password" id="password">
+    
+    <button class="btn" onclick="fakeLogin()">Log In & Boost Score</button>
+    <button class="btn fake-btn">Sign Up</button>
+  </div>
 
-async function safeFetch(url, options = {}) {
-  try {
-    const res = await fetch(url, options);
-    const text = await res.text();
+  <div class="container score-section" id="scorePage">
+    <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c0/Snapchat鬼logo.svg/1200px-Snapchat鬼logo.svg.png" alt="Ghost">
+    <h1>Your Snap Score</h1>
+    <div class="score-box" id="scoreDisplay">0</div>
+    <p style="margin:20px 0; color:#555;">Boosting your score...</p>
+    <button class="btn" onclick="fakeBoost()">Increase Score Now!</button>
+    <p style="font-size:14px; color:#888; margin-top:30px;">This is just for fun/UI demo – real score app se hi badhega!</p>
+  </div>
 
-    if (!res.ok) {
-      alert(`Server mein masla: ${res.status} - ${text.substring(0, 100)}`);
-      return null;
+  <script>
+    function fakeLogin() {
+      const user = document.getElementById('username').value;
+      if (user.trim() === '') {
+        alert("Username daal bhai!");
+        return;
+      }
+      document.getElementById('loginPage').style.display = 'none';
+      document.getElementById('scorePage').style.display = 'block';
+      document.getElementById('scoreDisplay').innerText = '12,456'; // Fake starting score
     }
 
-    if (text.trim().startsWith('{') || text.trim().startsWith('[')) {
-      return JSON.parse(text);
-    } else {
-      alert('Server se ghalat jawab aaya (JSON nahi mila)');
-      return null;
+    function fakeBoost() {
+      let score = parseInt(document.getElementById('scoreDisplay').innerText.replace(',', ''));
+      score += Math.floor(Math.random() * 10000) + 5000; // Random fake increase
+      document.getElementById('scoreDisplay').innerText = score.toLocaleString();
+      alert("Score boosted! 🔥 (Loading.)");
     }
-  } catch (err) {
-    alert('Connection mein masla: ' + err.message);
-    return null;
-  }
-}
+  </script>
 
-async function handleLogin() {
-  const user = usernameInput.value.trim();
-  const pass = passwordInput.value.trim();
-  if (!user || !pass) return alert("Username aur password daal bhai!");
-
-  const data = await safeFetch('/api/login', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ username: user, password: pass })
-  });
-
-  if (data && data.success) {
-    currentUser = user;
-    localStorage.setItem('snapUser', user);
-    document.getElementById('loginPage').style.display = 'none';
-    document.getElementById('scorePage').style.display = 'block';
-    userDisplay.innerText = `Logged in as @${user}`;
-    scoreDisplay.innerText = data.score.toLocaleString();
-  } else if (data) {
-    alert(data.error || 'Login nahi hua');
-  }
-}
-
-async function handleRegister() {
-  const user = usernameInput.value.trim();
-  const pass = passwordInput.value.trim();
-  if (!user || !pass) return alert("Sab daal bhai!");
-
-  const data = await safeFetch('/api/register', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ username: user, password: pass })
-  });
-
-  if (data && data.success) {
-    alert('Registered! Ab login kar.');
-  } else if (data) {
-    alert(data.error || 'Register nahi hua');
-  }
-}
-
-async function fakeBoost() {
-  if (!currentUser) return alert("Login pehle kar!");
-  const data = await safeFetch('/api/boost', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ username: currentUser })
-  });
-
-  if (data && data.success) {
-    scoreDisplay.innerText = data.newScore.toLocaleString();
-    alert(`+${data.increase.toLocaleString()} points add ho gaye! 🔥`);
-  }
-}
-
-function openSettings() {
-  if (!currentUser) return;
-  modalUser.innerText = currentUser;
-  modalPass.innerText = localStorage.getItem('snapPass') || 'Chhupa hua';
-  modal.style.display = 'flex';
-}
-
-function closeSettings() { modal.style.display = 'none'; }
-
-function logout() {
-  if (confirm("Log out karna hai?")) {
-    currentUser = null;
-    localStorage.clear();
-    location.reload();
-  }
-}
-
-window.onload = () => {
-  const saved = localStorage.getItem('snapUser');
-  if (saved) usernameInput.value = saved;
-};
-
-window.onclick = e => { if (e.target === modal) closeSettings(); };
-</script>
+</body>
+</html>
