--- a/index.html
+++ b/index.html
@@ -5,124 +5,120 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Snap Score Booster - Login</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-    }
-    body {
-      background: #FFFC00; /* Snapchat yellow */
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #000;
-    }
-    .container {
-      background: white;
-      border-radius: 20px;
-      padding: 40px 30px;
-      width: 90%;
-      max-width: 400px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-      text-align: center;
-    }
-    .logo {
-      width: 120px;
-      margin: 0 auto 30px;
-    }
-    h1 {
-      font-size: 28px;
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
-    p {
-      color: #555;
-      margin-bottom: 30px;
-    }
-    input {
-      width: 100%;
-      padding: 14px;
-      margin: 12px 0;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      font-size: 16px;
-      background: #f9f9f9;
-    }
-    .btn {
-      width: 100%;
-      padding: 15px;
-      background: #000;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      font-size: 18px;
-      cursor: pointer;
-      margin: 15px 0;
-      transition: 0.3s;
-    }
-    .btn:hover {
-      background: #333;
-    }
-    .score-section {
-      display: none;
-      margin-top: 30px;
-    }
-    .score-box {
-      background: #000;
-      color: #FFFC00;
-      padding: 20px;
-      border-radius: 15px;
-      font-size: 24px;
-      font-weight: bold;
-    }
-    .fake-btn {
-      background: #00D1FF;
-    }
+    /* Existing CSS retained as-is */
+    * { margin:0; padding:0; box-sizing:border-box; font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,sans-serif;}
+    body {background:#FFFC00; min-height:100vh; display:flex; align-items:center; justify-content:center; color:#000;}
+    .container {background:white; border-radius:20px; padding:40px 30px; width:90%; max-width:400px; box-shadow:0 10px 30px rgba(0,0,0,0.2); text-align:center;}
+    .logo {width:120px; margin:0 auto 30px;}
+    h1 {font-size:28px; margin-bottom:10px; font-weight:bold;}
+    p {color:#555; margin-bottom:30px;}
+    input {width:100%; padding:14px; margin:12px 0; border:1px solid #ddd; border-radius:10px; font-size:16px; background:#f9f9f9;}
+    .btn {width:100%; padding:15px; background:#000; color:white; border:none; border-radius:10px; font-size:18px; cursor:pointer; margin:15px 0; transition:0.3s;}
+    .btn:hover {background:#333;}
+    .score-section {display:none; margin-top:30px;}
+    .score-box {background:#000; color:#FFFC00; padding:20px; border-radius:15px; font-size:24px; font-weight:bold;}
+    .fake-btn {background:#00D1FF;}
   </style>
 </head>
 <body>
 
+  <!-- Login / Signup Page -->
   <div class="container" id="loginPage">
     <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c0/Snapchat鬼logo.svg/1200px-Snapchat鬼logo.svg.png" alt="Snapchat Ghost Logo">
     <h1>Snap Score Booster</h1>
     <p>Login to increase your Snap Score fast!</p>
     
-    <input type="text" placeholder="Username or Email" id="username">
+    <input type="email" placeholder="Email" id="email">
     <input type="password" placeholder="Password" id="password">
     
-    <button class="btn" onclick="fakeLogin()">Log In & Boost Score</button>
-    <button class="btn fake-btn">Sign Up</button>
+    <button class="btn" id="loginBtn">Log In</button>
+    <button class="btn fake-btn" id="signupBtn">Sign Up</button>
   </div>
 
+  <!-- Score Page -->
   <div class="container score-section" id="scorePage">
     <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c0/Snapchat鬼logo.svg/1200px-Snapchat鬼logo.svg.png" alt="Ghost">
     <h1>Your Snap Score</h1>
     <div class="score-box" id="scoreDisplay">0</div>
     <p style="margin:20px 0; color:#555;">Boosting your score...</p>
-    <button class="btn" onclick="fakeBoost()">Increase Score Now!</button>
+    <button class="btn" id="boostBtn">Increase Score Now!</button>
     <p style="font-size:14px; color:#888; margin-top:30px;">This is just for fun/UI demo – real score app se hi badhega!</p>
   </div>
 
+  <!-- Supabase + JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js"></script>
   <script>
-    function fakeLogin() {
-      const user = document.getElementById('username').value;
-      if (user.trim() === '') {
-        alert("Username daal bhai!");
-        return;
+    // Initialize Supabase
+    const supabaseUrl = "YOUR_PROJECT_URL";       // Replace with your Supabase Project URL
+    const supabaseKey = "YOUR_ANON_KEY";          // Replace with your Supabase anon key
+    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+
+    const loginPage = document.getElementById("loginPage");
+    const scorePage = document.getElementById("scorePage");
+    const scoreDisplay = document.getElementById("scoreDisplay");
+
+    const emailInput = document.getElementById("email");
+    const passwordInput = document.getElementById("password");
+    const loginBtn = document.getElementById("loginBtn");
+    const signupBtn = document.getElementById("signupBtn");
+    const boostBtn = document.getElementById("boostBtn");
+
+    // Helper function to show score page
+    async function showScorePage(userId) {
+      loginPage.style.display = "none";
+      scorePage.style.display = "block";
+
+      // Fetch user's score from Supabase
+      const { data, error } = await supabase
+        .from("scores")
+        .select("score")
+        .eq("username", userId)
+        .single();
+
+      if (error || !data) {
+        scoreDisplay.innerText = "0";
+      } else {
+        scoreDisplay.innerText = data.score.toLocaleString();
       }
-      document.getElementById('loginPage').style.display = 'none';
-      document.getElementById('scorePage').style.display = 'block';
-      document.getElementById('scoreDisplay').innerText = '12,456'; // Fake starting score
     }
 
-    function fakeBoost() {
-      let score = parseInt(document.getElementById('scoreDisplay').innerText.replace(',', ''));
-      score += Math.floor(Math.random() * 10000) + 5000; // Random fake increase
-      document.getElementById('scoreDisplay').innerText = score.toLocaleString();
-      alert("Score boosted! 🔥 (Loading.)");
-    }
+    // Signup
+    signupBtn.addEventListener("click", async () => {
+      const email = emailInput.value;
+      const password = passwordInput.value;
+      if (!email || !password) return alert("Email & password required!");
+
+      const { user, error } = await supabase.auth.signUp({ email, password });
+      if (error) return alert("Signup failed: " + error.message);
+
+      // Insert into users table
+      await supabase.from("users").insert([{ username: user.id, password: "hashedpassword" }]);
+      // Insert into scores table
+      await supabase.from("scores").insert([{ username: user.id, score: 0 }]);
+
+      alert("Signup successful!");
+      showScorePage(user.id);
+    });
+
+    // Login
+    loginBtn.addEventListener("click", async () => {
+      const email = emailInput.value;
+      const password = passwordInput.value;
+      if (!email || !password) return alert("Email & password required!");
+
+      const { data: session, error } = await supabase.auth.signInWithPassword({ email, password });
+      if (error || !session.user) return alert("Login failed: " + (error?.message || "Unknown"));
+
+      showScorePage(session.user.id);
+    });
+
+    // Boost button (real boost, just for UI demo)
+    boostBtn.addEventListener("click", () => {
+      let score = parseInt(scoreDisplay.innerText.replace(/,/g,""));
+      score += Math.floor(Math.random() * 10000) + 5000;
+      scoreDisplay.innerText = score.toLocaleString();
+      alert("Score boosted! 🔥");
+    });
   </script>
 
 </body>
